--- a/app/index.html
+++ b/app/index.html
@@ -1,32 +1,11 @@
-name: Azure Static Web App CI/CD
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Build Project
-        run: |
-          npm install
-          npm run build
-
-      - name: 'Deploy to Azure Static Web Apps'
-        uses: Azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "/"  # root folder of website
-          output_location: "/" # build output folder
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Surya Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1>Hello, I am Surya</h1>
+  <p>Azure Static Web App deployed via Terraform + CI/CD</p>
+</body>
+</html>
